--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -67,7 +67,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <activity android:name=".activity.MainActivity">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -96,7 +96,7 @@
 
         <!--融云配置-->
         <receiver
-            android:name=".receiver.RongIMNotificationReceiver"
+            android:name=".rong.RongIMNotificationReceiver"
             android:exported="true">
             <intent-filter>
                 <action android:name="io.rong.push.intent.MESSAGE_ARRIVED" />
@@ -106,7 +106,7 @@
             </intent-filter>
         </receiver>
         <activity
-            android:name=".activity.rong.ConversationListActivity"
+            android:name=".rong.ConversationListActivity"
             android:configChanges="keyboardHidden|orientation"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden|adjustResize">
@@ -121,7 +121,7 @@
         </activity>
         <!--会话界面-->
         <activity
-            android:name=".activity.rong.ConversationActivity"
+            android:name=".rong.ConversationActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden|adjustResize">
 
